# discord-embed

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ShareX.sxcu  discord-embed.service  docker-compose.yml  embed.subdomain.conf  i.subdomain.conf  main.py  nginx.conf  noxfile.py  pyproject.toml  requirements.txt  settings.py
.gitea/workflows/: build.yml
.github/: renovate.json
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml  deploy.yml  docker-publish.yml  pytest.yml
discord_embed/: generate_html.py  main.py  misc.py  settings.py  video.py  video_file_upload.py  webhook.py
extras/: .env.example  Dockerfile  discord-embed.socket  docker-compose.yml
static/: style.css
templates/: index.html
tests/: test_discord_embed.py  test_generate_html.py  test_video.py  test_webhook.py
