[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.poetry]
name = "discord-embed"
version = "1.0.0"
description = "Make nice embeds for Discord"
authors = [ "Joakim Hellsén <tlovinator@gmail.com>" ]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
ffmpeg-python = "^0.2.0"
discord-webhook = "^1.3.1"
python-multipart = "^0.0.17"
python-dotenv = "^1.0.1"
Jinja2 = "^3.1.4"
uvicorn = { extras = [ "standard" ], version = "^0.32.0" }

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.0"
pytest = "^8.3.2"
pre-commit = "^4.0.0"

[tool.ruff]
preview = true
fix = true
unsafe-fixes = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN201",
  "CPY001",
  "D100",
  "D104",
  "RUF029",
]

lint.per-file-ignores."tests/**/*.py" = [
  "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
  "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
  "S101", # asserts allowed in tests...
]
lint.pydocstyle.convention = "google"
